# test-python-starter

./: .coveragerc  .pre-commit-config.yaml  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg
test_python_starter/: __init__.py  __main__.py  cli.py  core.py
tests/: test_test_python_starter.py
